--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </dependencies>
 
     <build>
-        <finalName>calc</finalName>
+        <finalName>cal-backend</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
